tests/NormalTests/paczka1/fuzzy1/16044697.err
Error in line 9: mOZFGZze A942 32,3
Error in line 6: aDHmIL A942 38,6
Error in line 34: l7iZO7Gm S710 92,4
Error in line 33: Yame5 A942 59,7
Error in line 32: aDHmIL A942 1,3
